feat<DTO> Implementing a new DTO structure to be used for bids
optimize<Socket> Using Virtual Threads instead of FixedThreadPool.

feat<Json> Creating an util class JsonConverter used for Serializing and Deserializing.

feat Creating new base entities for DTO.